# Omikron

./: .gitignore  LICENSE  Omikron.py  OmikronConst.py  OmikronDB.py  Omikron_installer.bat  README.md  applycolor.py  classinfo.py  dateselector.py  index.html  makedatafile.py  makedataform.py  makeuptestinfo.py  omikron.py  omikronconst.py  omikrondb.py  omikronfile.py  omikrongui.py  package-lock.json  package.json  pyproject.toml  savedata.py  savepersonaldata.py  sendmessage.py  test.py  updater.bat  v1.2.0_patcher.py  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build_omikron.yml  dependabot-ci-automerge.yml  release-on-merge.yml  watch_selenium.yml
omikron/: chrome.py  classinfo.py  config.py  datafile.py  dataform.py  defs.py  errorui.py  exception.py  gui.py  log.py  makeuptest.py  progress.py  startui.py  studentinfo.py  style.py  thread.py  util.py
source/: defs.py  gui.py  main.py  message.py  omikronchorme.py  omikronconfig.py  omikrondefs.py  omikrongui.py  omikronlog.py  omikronthread.py  thread.py
src/: App.tsx  main.tsx
src-pyloid/: main.py  progress.py  server.py  updater.py
src-pyloid/omikron/: chrome.py  classinfo.py  datafile.py  dataform.py  defs.py  makeuptest.py
src/components/: FullHeader.tsx
src/contexts/: prereq.tsx
src/lib/: progress.ts
src/meta/: descriptions.ts
src/types/: omikron.ts
src/utils/: rpc.ts
src/views/: AddStudentView.tsx  GenerateDailyFromView.tsx  GenericComingSoonView.tsx  ManageStudentView.tsx  MoveStudentView.tsx  PrereqSetupView.tsx  ReapplyConditionalFromatView.tsx  SaveExamView.tsx  (+10 more)
(+4 files in other folders)
