[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omikron"
version = "0.1.0"
description = "Internal lib"
requires-python = ">=3.10"

dependencies = [
    "pyloid",
]

[dependency-groups]
dev = [
    "pyloid-builder",
    "pyloid-watcher",
    "ruff",
]

[tool.setuptools]
packages = ["omikron"]
